# adaptyv-bo-tudor

./: .gitignore  .pre-commit-config.yaml  Readme.md  env.yml  pyproject.toml  requirements.txt  setup.cfg  tach.toml  tox.ini
.dvc/: config
modal/: inference_endpoint.py
sample_data/: .gitignore  large_file.csv.dvc
src/adaptyv_bo/: .gitignore  artifact_processing.py  run_benchmark.py  test_model.py
src/adaptyv_bo/acquisitions/: __init__.py  acquisitions.py  base.py
src/adaptyv_bo/config/: mlflow.py  optimization.py
src/adaptyv_bo/data/: process.py
src/adaptyv_bo/data/datasets/gb1/: .gitignore  gb1.csv.dvc  gb1_2site.csv  gb1_2site.csv.dvc  gb1_3site.csv  gb1_3site.csv.dvc
src/adaptyv_bo/encoding/: base.py  esm2.py  onehot.py
src/adaptyv_bo/generator/: base.py  generator.py
src/adaptyv_bo/lightning_logs/version_55/checkpoints/: epoch=9-step=10-v1.ckpt  epoch=9-step=10-v2.ckpt  epoch=9-step=10-v3.ckpt  epoch=9-step=10.ckpt
src/adaptyv_bo/mlruns/0/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/01f635720e4749b8b79595f4266c681b/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/19d978dc92b142e8b84e7451b251fa0b/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/209ff3c490d24783afe4be19ec4f37bb/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/2433b8d2f4504f9e92a4af08acdd90e4/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/524a08291d4b41459aa9b2dc30596626/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/586556572d2048b6b9a2bcfe4af706c0/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/75fdb9879672462f92b76f31e3e0cf10/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/864de75bd1944bf191e51eaccb5878a9/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/94608426b39c4d59ae4ca1376d26be91/: meta.yaml
src/adaptyv_bo/mlruns/426854329508006800/ce2dc6bfd7214481a5c4b67c2765db1a/: meta.yaml
src/adaptyv_bo/optimization/: bayesian_loop.py
src/adaptyv_bo/output_20240923_191206/: log_seed_0.txt
src/adaptyv_bo/output_20240923_192225/: log_seed_0.txt
src/adaptyv_bo/output_20240923_192225/csv/: seed_0_results.csv
src/adaptyv_bo/output_20240923_192801/: log_seed_0.txt
src/adaptyv_bo/output_20240923_192801/csv/: seed_0_results.csv
src/adaptyv_bo/output_20240923_192947/: log_seed_0.txt
src/adaptyv_bo/output_20240923_192947/csv/: seed_0_results.csv
src/adaptyv_bo/output_20240923_194144/: log_seed_0.txt
src/adaptyv_bo/output_20240923_194144/csv/: seed_0_results.csv
src/adaptyv_bo/output_20240924_124230/: log_seed_0.txt
src/adaptyv_bo/output_20240924_124230/csv/: seed_0_results.csv
src/adaptyv_bo/output_20240924_124601/: log_seed_0.txt
src/adaptyv_bo/output_20240924_124630/: log_seed_0.txt
src/adaptyv_bo/output_20240924_124630/csv/: seed_0_results.csv
src/adaptyv_bo/surrogates/: base.py  bnn.py  cnn.py  dkl.py  dnn.py  ensemble.py  gp.py  loss.py  random_forest.py  xgboost.py
src/adaptyv_bo/utils/: cnn.py  load.py  metrics.py  plotter.py  query.py
src/adaptyv_bo/utils/trackers/: base.py  mlflow.py
tests/: test_example.py
utilities/gcp_idle_shutdown/: Readme.md  idle_startup_script.sh
(+169 files in other folders)
